# angry-purple-tiger-py

./: .gitignore  LICENSE  README.md  pyproject.toml
angry_purple_tiger/: __init__.py  adjectives.py  angry_purple_tiger.py  animals.py  colors.py  compress.py
tests/: test_angry_purple_tiger.py
