[tool.poetry]
name = "angry-purple-tiger"
version = "0.1.0"
description = "Animal-based hash digests for humans"
authors = ["Evan Diewald <evandiewald@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/evandiewald/angry-purple-tiger-py"
repository = "https://github.com/evandiewald/angry-purple-tiger-py"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
